pagewrap fix

--- a/app/styles/_max-1920.scss
+++ b/app/styles/_max-1920.scss
@@ -3,7 +3,7 @@ $icon-font-path: '../fonts/';
 @media only screen and (max-width:1919px) {
 
 	.pagewrap {
-		//width: 1100px;
+		width: 1100px;
 	}
 
 }	
